# nbstrip

./: .pre-commit-hooks.yaml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
