[metadata]
name = nbstrip
author = Colm Talbot
author_email = talbotcolm@gmail.com
url = https://github.com/ColmTalbot/nbstrip
version = 0.1.0
description = Strip all outputs and metadata from jupyter notebooks
license_files = LICENSE
classifiers = Programming Language :: Python,License :: OSI Approved :: MIT License,Operating System :: OS Independent,Programming Language :: Python :: 3 :: Only

[options]
py_modules = nbstrip

[options.entry_points]
console_scripts =
    nbstrip = nbstrip:main
